--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VirtueVille - Home</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="/public/home.css">
 </head>
 <body>
   <div class="banner">
@@ -31,7 +31,7 @@
 
   <script>
     document.getElementById("playBtn").addEventListener("click", () => {
-      window.location.href = "phaser.html";
+      window.location.href = "/public/phaser.html";
     });
   </script>
 </body>
