--- a/view/index.html
+++ b/view/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VirtueVille - Home</title>
-  <link rel="stylesheet" href="/public/home.css">
+  <link rel="stylesheet" href="/home.css">
 </head>
 <body>
   <div class="banner">
     <div class="slider" style="--quantity: 12;">
-      <div class="item" style="--position:1"><img src="home_assets/boy1.png" alt="Boy 1"></div>
-      <div class="item" style="--position:2"><img src="home_assets/girl1.png" alt="Girl 1"></div>
-      <div class="item" style="--position:3"><img src="home_assets/man1.png" alt="Man 1"></div>
-      <div class="item" style="--position:4"><img src="home_assets/woman1.png" alt="Woman 1"></div>
-      <div class="item" style="--position:5"><img src="home_assets/boy2.png" alt="Boy 2"></div>
-      <div class="item" style="--position:6"><img src="home_assets/girl2.png" alt="Girl 2"></div>
-      <div class="item" style="--position:7"><img src="home_assets/man2.png" alt="Man 2"></div>
-      <div class="item" style="--position:8"><img src="home_assets/woman2.png" alt="Woman 2"></div>
-      <div class="item" style="--position:9"><img src="home_assets/boy3.png" alt="Boy 3"></div>
-      <div class="item" style="--position:10"><img src="home_assets/girl3.png" alt="Girl 3"></div>
-      <div class="item" style="--position:11"><img src="home_assets/man3.png" alt="Man 3"></div>
-      <div class="item" style="--position:12"><img src="home_assets/woman3.png" alt="Woman 3"></div>
+      <div class="item" style="--position:1"><img src="/home_assets/boy1.png" alt="Boy 1"></div>
+      <div class="item" style="--position:2"><img src="/home_assets/girl1.png" alt="Girl 1"></div>
+      <div class="item" style="--position:3"><img src="/home_assets/man1.png" alt="Man 1"></div>
+      <div class="item" style="--position:4"><img src="/home_assets/woman1.png" alt="Woman 1"></div>
+      <div class="item" style="--position:5"><img src="/home_assets/boy2.png" alt="Boy 2"></div>
+      <div class="item" style="--position:6"><img src="/home_assets/girl2.png" alt="Girl 2"></div>
+      <div class="item" style="--position:7"><img src="/home_assets/man2.png" alt="Man 2"></div>
+      <div class="item" style="--position:8"><img src="/home_assets/woman2.png" alt="Woman 2"></div>
+      <div class="item" style="--position:9"><img src="/home_assets/boy3.png" alt="Boy 3"></div>
+      <div class="item" style="--position:10"><img src="/home_assets/girl3.png" alt="Girl 3"></div>
+      <div class="item" style="--position:11"><img src="/home_assets/man3.png" alt="Man 3"></div>
+      <div class="item" style="--position:12"><img src="/home_assets/woman3.png" alt="Woman 3"></div>
     </div>
 
     <div class="content">
@@ -31,7 +31,7 @@
 
   <script>
     document.getElementById("playBtn").addEventListener("click", () => {
-      window.location.href = "/public/phaser.html";
+      window.location.href = "/phaser.html";
     });
   </script>
 </body>
